fix(configuration): Schema validation quietly failed
The schema generation failed to be parsed correctly. This is fixed and we now log issues with our current configuration version 0. The server will continue to log issues until we migrate our configuration to version 1